--- a/ManagementSupermarket/Properties/Resources.resx
+++ b/ManagementSupermarket/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="dangnhap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\Logo Project C#\dangnhap.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bgMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\Background\bgMain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconPlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\Icon\iconPlus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="iconSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\Icon\iconSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bgMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\Background\bgMain.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="png-clipart-microsoft-excel-logo-microsoft-excel-computer-icons-xls-microsoft-angle-text" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\png-clipart-microsoft-excel-logo-microsoft-excel-computer-icons-xls-microsoft-angle-text.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
