Fix bug Part 1 and update Create Bill Version 2

--- a/ManagementSupermarket/Manager/frmHomeOfManager.resx
+++ b/ManagementSupermarket/Manager/frmHomeOfManager.resx
@@ -121,7 +121,7 @@
   <data name="pic_Logo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADieSURBVHhe7Z0J
+        vQAADr0BR/uQrQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAADieSURBVHhe7Z0J
         tBxVnf992UMSsoeE7CRkX0gISUgCCYEAWVnDJsgygBNZDLvggEREg4IICjggOAPigoAOm7LPMIoOf0Bh
         3BkWlRkUdBhndEbHwfrX7/la+3V/671bXa+r7q33+ZzzOcdjqu+7XbxX/enbVdVvAwAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -366,8 +366,8 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAJ7ytrf9f4OazPmCRneBAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>30, 20</value>
+  <metadata name="TimeForSidebar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>54</value>
